--- a/client.html
+++ b/client.html
@@ -4,17 +4,13 @@ title: Client Libraries
 ---
 
 <p>There is now a
-<a href=http://wiki.github.com/kr/beanstalkd/client-libraries>wiki page for
+<a href=https://github.com/beanstalkd/beanstalkd/wiki/Client-Libraries>wiki page for
 beanstalk clients</a> with a more up-to-date list of supported languages.</p>
 
-<p>Or, make your own client API. It's easy! The <a
-href=http://github.com/kr/beanstalkd/tree/v1.3/doc/protocol.txt?raw=true>1.3
-protocol doc</a> gives a complete description of the beanstalk protocol.</p>
+<p>Or, make your own client API.
+It's easy! The <a href=https://raw.githubusercontent.com/beanstalkd/beanstalkd/master/doc/protocol.txt>protocol doc</a>
+gives a complete description of the beanstalk protocol.</p>
 
 <p><b>Note:</b> as of version 1.0 the protocol will remain compatible until
 beanstalkd 2.0. Any client written to work with a 1.x beanstalkd will also
 work, unchanged, with any later beanstalkd before 2.0.</p>
-
-<p>You can find the bleeding-edge latest <a
-href="http://github.com/kr/beanstalkd/tree/master/doc/protocol.txt">protocol.txt
-in git</a>.
